# tricks

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  avltree.cpp  factory.cpp  mergesort.cpp  quicksort.cpp  singleton.cpp  treeorder.cpp  vector.cpp
